fixed more layout issues

--- a/view/src/main/resources/static/sass/partials/pages/_userprofile.scss
+++ b/view/src/main/resources/static/sass/partials/pages/_userprofile.scss
@@ -215,7 +215,7 @@ a.attendingConference {
 }
 
 .main_long {
-  width: 698px !important;
+  width: 720px !important;
 }
 
 .comm_list {
